--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -321,7 +321,7 @@ p <- grid.arrange(pie1, pie2, pie3,
 
 ### Figure 3b: Shared pattern (eQTL)
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=8, fig.width=8}
-trait <- "LDL-ukb-d-30780_irnt"
+trait <- "LDL-ukb-d-30780_irnt" #IBD-ebi-a-GCST004131 #LDL-ukb-d-30780_irnt
 out <- plot_pairwise_PVE(trait, samplesize, n_top = 5)
 out[[1]]
 ```
